# Cpp_tools

./: .gitignore  CMakeLists.txt  Playground_run.cpp  README.md  Sort_files_run.cpp  playground_run.cpp  sort_files_run.cpp
Catch_tests/: CMakeLists.txt  Sort_files_tests.cpp
Playground_lib/: CMakeLists.txt  Playground.cpp  Playground.h
Sort_files_lib/: CMakeLists.txt  Sort_files.cpp  Sort_files.h
catch_tests/: CMakeLists.txt  catch.hpp  sort_files_tests.cpp
playground/: meson.build
playground/src/: bank.h  cpp20.cpp  i_cannot_believe_it.cpp  passing_params.cpp  playground.cpp  playground.h  playground_run.cpp
playground_lib/: CMakeLists.txt  playground.cpp  playground.h  simple_struct.h
sort_files/: meson.build
sort_files/src/: sort_files.cpp  sort_files.h  sort_files_run.cpp
sort_files_lib/: CMakeLists.txt  sort_files.cpp  sort_files.h
src/: README.md  sort_files.cpp
src/sort_files/: main.cpp  sort_files.cpp  sort_files.h  sort_files_tests.cpp  sort_files_utils.h
